[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2html-converter"
version = "1.0.0"
description = "Convert PDF to HTML with support for scanned and text-based PDFs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
wenpdf = "convert:main"

[project.urls]
Homepage = "https://github.com/yourusername/pdf2html-converter"
Repository = "https://github.com/yourusername/pdf2html-converter.git"